# pruecendrae_cli

./: Cargo.toml  README.md  pruecendrae_cli.code-workspace
src/: create_local_port.rs  lib.rs  migration_utilities.rs  parse_requests.rs  process_configuration_file.rs  process_task_info.rs  request.rs  spawn_server.rs
src/migration_utilities/: is_concept_equal.rs  is_equal_at.rs  parse.rs
src/parse_requests/: parse_check_request.rs  parse_create_request.rs  parse_output_request.rs
src/spawn_server/: parse_requests.rs
src/spawn_server/parse_requests/: parse_check_request.rs  parse_create_request.rs  parse_output_request.rs
tests/: basic.rs  basic_tests.rs  communication.rs  communication_tests.rs  configuration.rs
