[package]
name = "pruecendrae_cli"
version = "0.1.1-dev"
authors = ["Kenneth Trecy Tobias <33564322+KennethTrecy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chearmyp = { git = "http://repo.local/KennethTrecy/chearmyp", tag = "v0.3.1" }
pruecendrae_core = { git = "http://repo.local/KennethTrecy/pruecendrae_core", tag = "v0.1.0" }
