[package]
name = "pruecendrae_cli"
version = "0.1.1-dev"
authors = ["Kenneth Trecy Tobias <33564322+KennethTrecy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chearmyp_parser = { git = "http://chearmyp.local/chearmyp_parser", tag = "v0.5.0" }
pruecendrae_core = { git = "http://pruecendrae.local/pruecendrae_core", tag = "v0.1.0" }

[features]
debug_request = []
debug_response = []
